# verifiable-alignment

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dapo_config.yaml  data_gen.yaml  dpo_base.yaml  dpo_sweep.yaml  ds_zero2.json  grpo_base.yaml  prm_base.yaml
data/: generate_preferences.py  verifier.py
demo/: README.md  app.py
docker/: Dockerfile
eval/: evaluate_math.py  kl_divergence.py  reward_hacking.py  reward_hacking_report.json
tests/: test_training_components.py  test_verifier.py
training/: constitutional_ai.py  train_dapo.py  train_dpo.py  train_grpo.py  train_prm.py  train_rlaif.py
